Add Patrick McFarland to AUTHORS (mowgli_mempool API cleanups).
committer: William Pitcock <nenolod@chocobo.atheme.org>

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,3 @@
+Patrick McFarland <pmcfarland -at- adterrasperaspera.com>
 William Pitcock <nenolod -at- sacredspiral.co.uk>
 Jilles Tjoelker <jilles -at- stack.nl>
