Point to project page @Atheme.
committer: William Pitcock <nenolod@chocobo.atheme.org>

--- a/README
+++ b/README
@@ -45,6 +45,8 @@ It contains:
 More classes will be added with later releases. Please contact nenolod -at- atheme.org
 if you have suggestions on what should be implemented.
 
+More information is available at http://www.atheme.org/projects/mowgli.shtml.
+
 
 Installation
 ------------
