--- a/README
+++ b/README
@@ -20,12 +20,15 @@ extensions to C.
 
 It contains:
     - mowgli_alloc: A safe wrapper around malloc/free.
+    - mowgli_argstack: Safe serialization of valists.
     - mowgli_assert: Various assertion routines that can be used.
     - mowgli_bitvector: Bitmasks with an unlimited level of precision.
     - mowgli_dictionary: A keyword-backed definition hashtable class.
     - mowgli_error_backtrace: Provide feedback to users on what caused the
                               error they are recieving.
     - mowgli_exception: Assertions with user feedback.
+    - mowgli_formatter: A simple token formatter which is sometimes useful.
+    - mowgli_global_storage: A simple global storage library.
     - mowgli_hash: A portable implementation of the FNV-1 hash.
     - mowgli_heap: An optimistic heap-based memory allocator
     - mowgli_hook: A simple hooks API you can use for your application, which
@@ -38,9 +41,13 @@ It contains:
     - mowgli_module: A wrapper around dlopen(3) and dlsym(3).
     - mowgli_object: A simple class which provides reference counted pointers and
                      polymorphism of structs.
+    - mowgli_object_class: Classing and subclassing for objects.
+    - mowgli_object_metadata: Metadata for objects.
+    - mowgli_object_messaging: Messaging and signalling for objects.
     - mowgli_queue: A simple class which implements double-ended queues.
     - mowgli_random: A high performance psuedo-random number generator.
     - mowgli_signal: A wrapper for sigaction(2).
+    - mowgli_spinlock: Portable spinlocks.
 
 More classes will be added with later releases. Please contact nenolod -at- atheme.org
 if you have suggestions on what should be implemented.
