--- a/README
+++ b/README
@@ -49,8 +49,9 @@ It contains:
     - mowgli_signal: A wrapper for sigaction(2).
     - mowgli_spinlock: Portable spinlocks.
 
-More classes will be added with later releases. Please contact nenolod -at- atheme.org
-if you have suggestions on what should be implemented.
+More classes will be added with later releases. Please contact
+nenolod -at- atheme.org if you have suggestions on what should be 
+implemented.
 
 More information is available at http://www.atheme.org/projects/mowgli.shtml.
 
@@ -64,7 +65,9 @@ Installation is fairly typical:
   $ make
   $ sudo make install
 
-(If sudo isn't on your system, su to root.)
+(If sudo isn't on your system, su to root. On GNU systems you can even 
+do "su -c 'make install'", which is basically the same thing as using 
+sudo.)
 
 
 Bug Reports
