Build system: Enable checks for OpenSSL.
I plan on adding an SSL conveinence wrapper to VIO.

Autoconf magics taken from Atheme.

--- a/AUTHORS
+++ b/AUTHORS
@@ -3,3 +3,4 @@ William Pitcock <nenolod -at- sacredspiral.co.uk>
 Jonathan Schleifer <js-libmowgli -at- webkeks.org>
 Pippijn van Steenhoven <pippijn -at- one09.net>
 Jilles Tjoelker <jilles -at- stack.nl>
+Elizabeth Myers <elizabeth -at- sporksmoo.net>
