--- a/README
+++ b/README
@@ -72,5 +72,5 @@ sudo.)
 Bug Reports
 -----------
 
-Bugs can be reported on our tracker at http://bugs-meta.atheme.org against the
-Mowgli product.
+Bugs can be reported on our tracker at http://jira.atheme.org against the
+libmowgli product.
