--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,12 @@
-Patrick McFarland <pmcfarland -at- adterrasperaspera.com>
-William Pitcock <nenolod -at- sacredspiral.co.uk>
-Jonathan Schleifer <js-libmowgli -at- webkeks.org>
-Pippijn van Steenhoven <pippijn -at- one09.net>
-Jilles Tjoelker <jilles -at- stack.nl>
+All names are listed in alphabetical order.
+
+The following people are active contributors to libmowgli:
 Elizabeth Myers <elizabeth -at- sporksmoo.net>
+William Pitcock <nenolod -at- nenolod.net>
+Jonathan Schleifer <js-libmowgli -at- webkeks.org>
+Jilles Tjoelker <jilles -at- stack.nl>
+
+The following people have contributed to libmowgli in the past:
+Patrick McFarland <pmcfarland -at- adterrasperaspera.com>
+Pippijn van Steenhoven <pippijn -at- one09.net>
+Andrew Wilcox <awilcox -at- wilcox-tech.com>
