--- a/README
+++ b/README
@@ -19,36 +19,36 @@ libmowgli is a class library containing performance and usability oriented
 extensions to C.
 
 It contains:
-    - mowgli_alloc: A safe wrapper around malloc/free.
-    - mowgli_argstack: Safe serialization of valists.
-    - mowgli_assert: Various assertion routines that can be used.
-    - mowgli_bitvector: Bitmasks with an unlimited level of precision.
-    - mowgli_patricia: A keyword-backed definition hashtable class.
-    - mowgli_error_backtrace: Provide feedback to users on what caused the
+    - mowgli.alloc: A safe wrapper around malloc/free.
+    - mowgli.argstack: Safe serialization of valists.
+    - mowgli.assert: Various assertion routines that can be used.
+    - mowgli.bitvector: Bitmasks with an unlimited level of precision.
+    - mowgli.patricia: A keyword-backed definition hashtable class.
+    - mowgli.error_backtrace: Provide feedback to users on what caused the
                               error they are recieving.
-    - mowgli_exception: Assertions with user feedback.
-    - mowgli_formatter: A simple token formatter which is sometimes useful.
-    - mowgli_global_storage: A simple global storage library.
-    - mowgli_hash: A portable implementation of the FNV-1 hash.
-    - mowgli_heap: An optimistic heap-based memory allocator
-    - mowgli_hook: A simple hooks API you can use for your application, which
+    - mowgli.exception: Assertions with user feedback.
+    - mowgli.formatter: A simple token formatter which is sometimes useful.
+    - mowgli.global_storage: A simple global storage library.
+    - mowgli.hash: A portable implementation of the FNV-1 hash.
+    - mowgli.heap: An optimistic heap-based memory allocator
+    - mowgli.hook: A simple hooks API you can use for your application, which
                    allows for hooks to provide both application data and user data.
-    - mowgli_list: A high performance linked lists implementation with O(1) scalability
+    - mowgli.list: A high performance linked lists implementation with O(1) scalability
                    for most common operations.
-    - mowgli_logger: An internal class for handling logging of exceptions.
-    - mowgli_module: A wrapper around dlopen(3) and dlsym(3).
-    - mowgli_object: A simple class which provides reference counted pointers and
+    - mowgli.logger: An internal class for handling logging of exceptions.
+    - mowgli.module: A wrapper around dlopen(3) and dlsym(3).
+    - mowgli.object: A simple class which provides reference counted pointers and
                      polymorphism of structs.
-    - mowgli_object_class: Classing and subclassing for objects.
-    - mowgli_object_metadata: Metadata for objects.
-    - mowgli_object_messaging: Messaging and signalling for objects.
-    - mowgli_queue: A simple class which implements double-ended queues.
-    - mowgli_random: A high performance psuedo-random number generator.
-    - mowgli_signal: A wrapper for sigaction(2).
-    - mowgli_eventloop: A portable event loop implementation.
-    - mowgli_vio: An abstraction layer for I/O.
-    - mowgli_linebuf: A line-buffering implementation for clients.
-    - mowgli_thread: Minimal thread abstraction.
+    - mowgli.object_class: Classing and subclassing for objects.
+    - mowgli.object_metadata: Metadata for objects.
+    - mowgli.object_messaging: Messaging and signalling for objects.
+    - mowgli.queue: A simple class which implements double-ended queues.
+    - mowgli.random: A high performance psuedo-random number generator.
+    - mowgli.signal: A wrapper for sigaction(2).
+    - mowgli.eventloop: A portable event loop implementation.
+    - mowgli.vio: An abstraction layer for I/O.
+    - mowgli.linebuf: A line-buffering implementation for clients.
+    - mowgli.thread: Minimal thread abstraction.
 
 More classes will be added with later releases. Please contact
 nenolod -at- atheme.org if you have suggestions on what should be 
